 * Add introductory screencast link to documentation.
 * #59: Ignore "check_last" and consistency "prefix" when "archives" not in consistency checks.
 * #60: Add "Persistent" flag to systemd timer example.
 * #63: Support for Borg --nobsdflags option to skip recording bsdflags (e.g. NODUMP, IMMUTABLE) in
   archive.
 * Update tox.ini to only assume Python 3.x instead of Python 3.4 specifically.

1.1.15
 * Support for Borg BORG_PASSCOMMAND environment variable to read a password from an external file.
 * Fix for Borg create error when using borgmatic's --dry-run and --verbosity options together.
   Work-around for behavior introduced in Borg 1.1.3: https://github.com/borgbackup/borg/issues/3298
 * #55: Fix for missing tags/releases on Gitea and GitHub project hosting.
 * #56: Support for Borg --lock-wait option for the maximum wait for a repository/cache lock.
 * #58: Support for using tilde in exclude_patterns to reference home directory.

1.1.14
 * #49: Fix for typo in --patterns-from option.
 * #47: Support for Borg --dry-run option via borgmatic command-line.

1.1.13
 * #54: Fix for incorrect consistency check flags passed to Borg when all three checks ("repository",
   "archives", and "extract") are specified in borgmatic configuration.
 * #48: Add "local_path" to configuration for specifying an alternative Borg executable path.
 * #49: Support for Borg experimental --patterns-from and --patterns options for specifying mixed
   includes/excludes.
 * Moved issue tracker from Taiga to integrated Gitea tracker at
   https://projects.torsion.org/witten/borgmatic/issues

1.1.12
 * #46: Declare dependency on pykwalify 1.6 or above, as older versions yield "Unknown key: version"
   rule errors.
 * Support for Borg --keep-minutely prune option.

1.1.11
 * #26: Add "ssh_command" to configuration for specifying a custom SSH command or options.
 * Fix for incorrect /etc/borgmatic.d/ configuration path probing on macOS. This problem manifested